# FastAPI-Project

./: .coverage  .gitignore  database.db  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 2db701e6b156_create_users_table.py  543df3be1e35_exercicio_02_aula_04.py
tests/: conftest.py  test_app.py  test_db.py
