[tool.poetry]
name = "FastAPI-Project"
version = "0.1.0"
description = ""
authors = ["Potatoyz908 <euller2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
